--- a/pages/clanky.html
+++ b/pages/clanky.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body class="container">
 
@@ -31,16 +34,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-3 ms-md-2 ms-lg-auto mb-2 mb-md-0">
                   <li class="nav-item">
-                      <a class="nav-link" href="#matous-burysek">O mně</a>
+                      <a class="nav-link" href="/index.html#matous-burysek">O mně</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#sluzby">Služby</a>
+                      <a class="nav-link" href="/index.html#sluzby">Služby</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="./pages/clanky.html">Články</a>
+                      <a class="nav-link" href="/pages/clanky.html">Články</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="./pages/kontakt.html">Kontakt</a>
+                      <a class="nav-link" href="/pages/kontakt.html">Kontakt</a>
                   </li> 
               </ul>
           </div>
@@ -50,11 +53,83 @@
     <!-- MAIN -->
     <main>
 
-        <!-- ROW: KONTAKTNÍ FORMULÁŘ -->
+      <!-- 1. ROW: AKTUÁLNÍ ČLÁNEK -->
 
-        <section id="matous-burysek" class="row text-bg-secondary text-white p-3 p-md-5">
-            Tato část webové stránky je v přípravě.
-        </section>
+      <section id="clanek" class="row bg-light py-5">
+      </section>
+
+      <!-- 2. ROW: TLAČÍTKO -->
+
+      <section id="poptavka" class="row bg-light py-5">
+        <div class="d-grid gap-2 col-8 col-md-5 mx-auto">
+            <button class="btn btn-primary btn-lg text-uppercase fw-bold" onclick="openContactBox()"><h3 class="pt-2">Nezávazně poptat účetní služby</h3></button>
+        </div>
+    </section>
+
+      <!-- 3. ROW: DALŠÍ ČLÁNKY -->
+
+      <section id="dalsi-clanky" class="row bg-primary p-3 p-md-5">
+        
+        <h2 class="text-white">Další články</h2>
+
+        <div class="col">
+          <div class="card">
+            <img src="https://picsum.photos/id/306//200/100" class="card-img-top" alt="...">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title fw-bold">Zdanění prodeje vozidla mezi členskými státy EU</h5>
+              <p class="card-text">V tomto článku se dozvíte, jak správně zaúčtovat a zdanit koupi a prodej motorového vozidla mezi členskými státy EU.</p>
+              <p class="card-text"><small class="text-muted">Poslední aktualizace: 29. 8. 2022</small></p>
+              <div class="text-center mt-auto mb-2">
+                <a href="#" class="btn btn-primary">Přečíst článek</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card">
+            <img src="https://picsum.photos/id/305//200/100" class="card-img-top" alt="...">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title fw-bold">Základy zdanění kryptoměn</h5>
+              <p class="card-text">V tomto článku se dozvíte, jak správně zaúčtovat a zdanit koupi a prodej motorového vozidla mezi členskými státy EU.</p>
+              <p class="card-text"><small class="text-muted">Poslední aktualizace: 29. 8. 2022</small></p>
+              <div class="text-center mt-auto mb-2">
+                <a href="#" class="btn btn-primary">Přečíst článek</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card">
+            <img src="https://picsum.photos/id/304//200/100" class="card-img-top" alt="...">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title fw-bold">Zdanění v ČR</h5>
+              <p class="card-text">V tomto článku se dozvíte, jak správně zaúčtovat a zdanit koupi a prodej motorového vozidla mezi členskými státy EU.</p>
+              <p class="card-text"><small class="text-muted">Poslední aktualizace: 29. 8. 2022</small></p>
+              <div class="text-center mt-auto mb-2">
+                <a href="#" class="btn btn-primary">Přečíst článek</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card">
+            <img src="https://picsum.photos/id/299/200/100" class="card-img-top" alt="...">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title fw-bold">Principy účetnictví</h5>
+              <p class="card-text">V tomto článku se dozvíte, jak správně zaúčtovat a zdanit koupi a prodej motorového vozidla mezi členskými státy EU.</p>
+              <p class="card-text"><small class="text-muted">Poslední aktualizace: 29. 8. 2022</small></p>
+              <div class="text-center mt-auto mb-2">
+                <a href="#" class="btn btn-primary">Přečíst článek</a>
+              </div>
+            </div>
+          </div>
+        </div>
+          
+        </div>
+      </section>
 
     </main>
 
