--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body class="container">
 
@@ -31,16 +34,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-3 ms-md-2 ms-lg-auto mb-2 mb-md-0">
                   <li class="nav-item">
-                      <a class="nav-link" href="#matous-burysek">O mně</a>
+                      <a class="nav-link" href="/index.html#matous-burysek">O mně</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#sluzby">Služby</a>
+                      <a class="nav-link" href="/index.html#sluzby">Služby</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="./pages/clanky.html">Články</a>
+                      <a class="nav-link" href="/pages/clanky.html">Články</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="./pages/kontakt.html">Kontakt</a>
+                      <a class="nav-link" href="/pages/kontakt.html">Kontakt</a>
                   </li> 
               </ul>
           </div>
