--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <!-- <button type="button" class="btn-close btn-close-white" aria-label="Close"></button> -->
     </div>
 
-    <script src="./bootstrap/js/bootstrap.js"></script>
-    <script src="./script.js"></script>
+    <script src="/bootstrap/js/bootstrap.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
