--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -153,6 +153,7 @@
       </div>
     </footer>
 
-    <script src="../bootstrap/js/bootstrap.js"></script>
+    <script src="/bootstrap/js/bootstrap.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
