--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -38,10 +38,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-3 ms-md-2 ms-lg-auto mb-2 mb-md-0">
                   <li class="nav-item">
-                      <a class="nav-link" href="#matous-burysek">O mně</a>
+                      <a class="nav-link" href="/index.html#matous-burysek">O mně</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#sluzby">Služby</a>
+                      <a class="nav-link" href="/index.html#sluzby">Služby</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="/pages/clanky.html">Články</a>
